Changes in version 1.7
  o Made the badge color reflect what's going on when it encounters a
    network error and tries to reconnect. Fixes bug 11400.

  o Renamed facilitator programs:
      facilitator              → fp-facilitator
      facilitator.cgi          → fp-registrar.cgi
      facilitator-email-poller → fp-registrar-email
      facilitator-reg          → fp-reg-decrypt
      facilitator-reg-daemon   → fp-reg-decryptd

  o Fixed a bug in the browser proxy which caused it to stop accepting
    new connections once it had failed 5 previous connections.

  o Updated the Tor Browser detection for the Firefox 24.0 User-Agent
    string. Patch by Arlo Breault. Fixes bug 11290.

Changes in version 1.6
  o Allowed the --port-forwarding option to work when the remote port
    number is given as 0.

  o Fixed registration on Mac OS X when the REMOTE address had an empty
    host part. A specification of ":9000", for example, would try to
    register "[]:9000".

  o Fixed registration on Windows with flashproxy-reg-appspot and
    flashproxy-reg-email. The certificate pinning code used a Python
    NamedTemporaryFile, which is not reopenable on Windows.

Changes in version 1.5
  o Add manpages for the facilitator and nodejs proxy, automatically
    generated by help2man.

  o Have nodejs flashproxy take GNU-style long command-line options.

  o Automate much of the configuration tasks involved in installing the
    facilitator using GNU autotools. See facilitator/INSTALL for details
    on the new process. Also move some common code here into the common
    python module. Patch by Ximin Luo. Fixes bug 9974.

  o Move common code to a separate flashproxy-common python module. Also
    split out some build scripts so distro packagers have an easier
    time. Patch by Ximin Luo. Fixes bug 6810.

  o Enabled binary frames (avoiding the overhead of base64 encoding) for
    Firefox 11 and later. Patch by Arlo Breault. Fixes bug 9069.
